umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_bicyclo-4.3.0-nonane.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms [
        "C#h#v3"
        "C#h2#v2"
        "C#h2#v2"
        "C#h2#v2"
        "C#h2#v2"
        "C#h#v3"
        "C#h2#v2"
        "C#h2#v2"
        "C#h2#v2"]
      :bonds [
        [0 1 "1"]
        [1 2 "1"]
        [2 3 "1"]
        [3 4 "1"]
        [4 5 "1"]
        [0 5 "1"]
        [5 6 "1"]
        [6 7 "1"]
        [7 8 "1"]
        [0 8 "1"]]}
    :success true}
  :counts {
    :output {
      :atoms [
        "C#h#v3"
        "C#h2#v2"
        "C#h2#v2"
        "C#h2#v2"
        "C#h2#v2"
        "C#h#v3"
        "C#h2#v2"
        "C#h2#v2"
        "C#h2#v2"]
      :bonds [
        [0 1 "1"]
        [1 2 "1"]
        [2 3 "1"]
        [3 4 "1"]
        [4 5 "1"]
        [0 5 "1"]
        [5 6 "1"]
        [6 7 "1"]
        [7 8 "1"]
        [0 8 "1"]]}
    :success true}}
