umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_butane.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#h3#v" "C#h2#v2" "C#h2#v2" "C#h3#v"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :single]]}
    :success true}
  :counts {
    :output {
      :atoms ["C#h3#v" "C#h2#v2" "C#h2#v2" "C#h3#v"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :single]]}
    :success true}}
